[workspace]
members = ["src/maelstrom", "src/maelstrom-build", "src/echo", "src/unique-ids"]
resolver = "3"

[workspace.dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_repr = "0.1.20"
tokio = { version = "1", features = ["io-std", "io-util", "macros", "rt", "rt-multi-thread"] }
