[package]
name = "echo"
version = "0.1.0"
edition = "2024"
authors = ["Silvestro Ranucci <sranu@pm.me>"]

[dependencies]
maelstrom = { path = "../maelstrom" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }

[build-dependencies]
maelstrom-build = { path = "../maelstrom-build" }
