[package]
name = "maelstrom-build"
version = "0.1.0"
edition = "2024"
authors = ["Silvestro Ranucci <sranu@pm.me>"]
description = "Build-time code generator for Maelstrom services (used in build.rs)"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
quote = "1"
proc-macro2 = "1"
syn = { version = "2", features = ["full"] }
prettyplease = "0.2"
